[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
grid = "0.9.0"
itertools = "0.10.5"
petgraph = "0.6.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
termion = "2.0.1"

[profile.release]
debug = true
