[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day01.rs"

[[bin]]
name = "day2"
path = "src/day02.rs"

[[bin]]
name = "day3"
path = "src/day03.rs"

[[bin]]
name = "day4"
path = "src/day04.rs"

[[bin]]
name = "day5"
path = "src/day05.rs"

[[bin]]
name = "day6"
path = "src/day06.rs"

[[bin]]
name = "day7"
path = "src/day07.rs"

[[bin]]
name = "day8"
path = "src/day08.rs"

[[bin]]
name = "day9"
path = "src/day09.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[[bin]]
name = "day12"
path = "src/day12.rs"

[[bin]]
name = "day13"
path = "src/day13.rs"

[[bin]]
name = "day14"
path = "src/day14.rs"

[[bin]]
name = "day15"
path = "src/day15.rs"

[[bin]]
name = "day16"
path = "src/day16.rs"

[[bin]]
name = "day17"
path = "src/day17.rs"

[[bin]]
name = "day18"
path = "src/day18.rs"

[[bin]]
name = "day19"
path = "src/day19.rs"

[[bin]]
name = "day20"
path = "src/day20.rs"

[dependencies]
aoc-zen-runner-macros = "0.1.0"
microbench = "0.5.0"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf", "criterion"] }
bit-set = "0.5.3"
grid = "0.12.0"
gridly_grids = "0.5.0"
itertools = "0.12.0"
petgraph = "0.6.4"
rayon = "1.8.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
termion = "2.0.3"


[profile.release]
debug = true
