[package]
name = "advent-of-code-2023"
version = "0.1.0"
authors = []
edition = "2021"

[[bin]]
name = "2023-day1"
path = "src/day1.rs"

[[bin]]
name = "2023-day2"
path = "src/day2.rs"

[dependencies]
aoc-zen-runner-macros = "0.1.0"
microbench = "0.5.0"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf", "criterion"] }
regex = "1.10.2"
coz = "0.1.3"
bstr = "1.8.0"
chumsky = "0.9.3"
chumsky1 = { package = "chumsky", git = "https://github.com/zesterer/chumsky", rev = "dce5918bd2dad591ab399d2e191254640a9ed14f" }

[profile.release]
debug = true

